style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500;800&display=swap");

@import url("https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=Chewy&family=Creepster&family=Gloria+Hallelujah&family=Patrick+Hand&display=swap");

/* 

  font-family: 'Allerta Stencil', sans-serif;
  font-family: 'Chewy', sans-serif;
  font-family: 'Gloria Hallelujah', sans-serif;
  font-family: 'Patrick Hand', sans-serif;
  ul-el

*/

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
  transition: all 0.1s cubic-bezier(0.175, 0.885, 0.32, 0.7);
}

*::selection {
  background-color: var(--polish);
  color: var(--gray);
}

:root {
  --black: #211f1f;
  --acsent: rgb(67, 151, 181);
  --white: rgb(243, 243, 243);
  --gray: rgb(85, 85, 85);
  --polish: rgb(233, 199, 171, 0.7);
  --hero-clr: rgb(23, 23, 23);

  --foreground: var(--black);
  --background: var(--white);
}

.darkmode {
  background: var(--background);
  color: var(--foreground);
}

html {
  scroll-behavior: smooth;
}
body {
  background: var(--black);
  color: var(--white);
}

header {
  padding-bottom: 70px;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: baseline;
}

nav {
  position: fixed;
  width: 88%;
  border-bottom: solid var(--polish) 2px;
  background-color: rgba(33, 33, 33, 0.9);
  backdrop-filter: blur(10px);
  z-index: 99;
  transition: all 0.3s ease-in;
}

.ul-el,
.ul {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 20px;
  padding: 5px;
}

.ul-el {
  gap: 0;
}

.ul-el li a,
.ul-el a,
.ul-el li {
  text-decoration: none;
  color: var(--white);
  list-style: none;
}
.ul-el > a {
  margin-right: auto;
  font-family: "Allerta Stencil";
  color: var(--acsent);
  transition: all 0.3s ease-in;
}

.ul-el li a {
  text-shadow: 0 0 10px var(--white);
}

.ul-el li {
  padding: 2px 5px;
  border: solid 1.5px var(--gray);
  border-radius: 5px;
  cursor: pointer;
}

.null {
  pointer-events: none;
  user-select: none;
  border: none;
  outline: none;
  visibility: hidden;
}

.burger {
  width: 32px;
  height: 32px;
  position: fixed;
  z-index: 99;
  top: 0.6rem;
  right: 3rem;
  display: none;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  border-radius: 5px;
  cursor: pointer;
}

.bar {
  background-color: var(--acsent);
  width: 90%;
  height: 3px;
  border-radius: 25px;
}

.ul-el .cart-count {
  border: none;
  margin: 0;
  position: relative;
}
.counting-logo {
  cursor: pointer;
  width: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
  /* change bellow */
  background-color: rgb(51, 162, 226);
  border-radius: 10px;
  position: fixed;
  top: 10px;
  right: 10px;
  padding: 5px 5px;
}

.counting {
  position: fixed;
  top: 4px;
  right: -1px;
  border: none;
  outline: none;
  color: red;
  font-size: 15px;
  font-weight: 500;
  z-index: 999;
  background-color: rgb(51, 162, 226);
  width: 18px;
  height: 18px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0;
}

/* apear on scroll down only */
.scroll-down nav {
  transform: translate3d(0, -100%, 0);
}

.scroll-up nav {
  filter: drop-shadow(0 -10px 20px rgb(170, 170, 170));
}

/* header ends here */

.popup {
  display: none;
  position: absolute;
  top: 5rem;
  right: -0.6rem;
  min-width: 250px;
}

.cart-count {
  border: solid;
}

.popup-container {
  background: url("exclamation-mark.png");
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
  background-color: var(--black);
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 15px 20px;
  border-radius: 15px;
  width: 350px;
  box-shadow: 0 0 10px var(--white);
}

.popup-handler {
  backdrop-filter: blur(5px);
  text-shadow: 0 0 10px var(--black);
}

.popup-handler .btn-close {
  position: absolute;
  right: -2rem;
  top: -1.7rem;
  border: solid 1px var(--acsent);
  border-radius: 50px;
  background-color: var(--polish);
  color: rgb(165, 5, 5);
  padding: 5px 10px;
  cursor: pointer;
  filter: drop-shadow(0px 0px 6px var(--white));
}

.btn-clear {
  position: absolute;
  right: 1.2rem;
  bottom: 0.5rem;
  border: solid 2px var(--acsent);
  border-radius: 5px;
  background-color: var(--white);
  color: rgb(165, 5, 5);
  padding: 5px;
  cursor: pointer;
  filter: drop-shadow(0px 0px 6px var(--black));
}

.popup.active {
  display: flex;
  justify-content: center;
  align-items: center;
}

.popup h3 {
  font-family: "Patrick Hand", sans-serif;
  border: solid var(--acsent) 2.3px;
  border-radius: 10px;
  padding: 5px;
}

.popup p {
  font-family: "Gloria Hallelujah", sans-serif;
  font-weight: bolder;
  padding: 5px 10px;
  border-bottom: solid;
  min-width: 300px;
  max-width: 350px;
}

main {
  width: 88%;
  margin: 0 auto;
}

#home {
  background-size: contain;
  background-repeat: no-repeat;
}

.row {
  position: relative;
}

.cool-hang {
  background-image: url("online-shopping1.png");
  background-repeat: no-repeat;
  background-size: contain;
  border-bottom: solid var(--polish) 3.5px;
  margin-bottom: 2rem;
}

.cool-hang::after {
  content: "";
  width: 4px;
  height: 20px;
  background-color: var(--white);
  position: absolute;
  top: -4.5px;
  left: -6.5px;
  z-index: 98;
}

.cool-hang::before {
  content: "";
  width: 25px;
  height: 4px;
  background-color: var(--white);
  position: absolute;
  top: -1px;
  left: -9px;
  z-index: 98;
}

.brand {
  font-size: 4rem;
  color: var(--acsent);
  font-family: "Allerta Stencil", sans-serif;
  text-shadow: 0 0 10px var(--acsent);
  margin-left: 7rem;
  transition: all 0.1s ease-in-out;
}

/* fading */
.span {
  opacity: 0;
  transition: all 0.1s cubic-bezier(0.68, -0.55, 0.265, 2);
  transform: translateY(100px);
  /* display: inline-block; */
  filter: blur(50px);
}
/* ... */

